[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endstone-waffenauth"
version = "0.3.0"
description = "WaffenAuth - система авторизации для Endstone"
dependencies = []
requires-python = ">=3.10"

[project.entry-points."endstone"]
waffenauth = "endstone_waffenauth:WaffenAuth"

[tool.setuptools.packages.find]
where = ["src"]
