[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "waffenauth"
version = "1.0.0"
description = "An authentication plugin using GUI forms."
authors = [{ name = "YourName" }]
dependencies = [
    "passlib>=1.7.4", # Добавляем passlib для Argon2
    "argon2-cffi>=21.1.0" # Зависимость для Argon2 в passlib
]

[tool.endstone]
type = "python"
entry_point = "main:WaffenAuthPlugin"
api_version = "0.11.3"

[[tool.endstone.permissions]]
name = "wt.login"
description = "Allows the player to log in after authentication"
default = "false"

[[tool.endstone.permissions]]
name = "wt.register"
description = "Allows the player to initiate the registration process"
default = "true"

[[tool.endstone.commands]]
name = "auth"
description = "Authentication command"
usage = "/auth"
permission = "wt.register"
